// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate types correctly generates JS SDK types 1`] = `
"type DVCJSON = { [key: string]: string | boolean | number }

export type DVCVariableTypes = {
    /**
        description: Different ways to say hello
        created by: User 1
        created on: 2021-07-04
    */
    'enum-var': 'Hello' | 'Hey' | 'Hi'
    /**
        created by: User 2
        created on: 2021-07-04
    */
    'regex-var': string
    /**
        created by: User 1
        created on: 2021-07-04
    */
    'string-var': string
    /**
        created by: User 2
        created on: 2021-07-04
    */
    'boolean-var': boolean
    /**
        created by: User 1
        created on: 2021-07-04
    */
    'number-var': number
    /**
        created by: Unknown User
        created on: 2021-07-04
    */
    'json-var': DVCJSON
}

/**
    description: Different ways to say hello
    created by: User 1
    created on: 2021-07-04
*/
export const ENUM_VAR = 'enum-var' as const

/**
    created by: User 2
    created on: 2021-07-04
*/
export const REGEX_VAR = 'regex-var' as const

/**
    created by: User 1
    created on: 2021-07-04
*/
export const STRING_VAR = 'string-var' as const

/**
    created by: User 2
    created on: 2021-07-04
*/
export const BOOLEAN_VAR = 'boolean-var' as const

/**
    created by: User 1
    created on: 2021-07-04
*/
export const NUMBER_VAR = 'number-var' as const

/**
    created by: Unknown User
    created on: 2021-07-04
*/
export const JSON_VAR = 'json-var' as const
"
`;

exports[`generate types correctly generates JS SDK types with inlined comments 1`] = `
"type DVCJSON = { [key: string]: string | boolean | number }

export type DVCVariableTypes = {
    'enum-var': 'Hello' | 'Hey' | 'Hi' // (Different ways to say hello) created by User 1 on 2021-07-04
    'regex-var': string // created by User 2 on 2021-07-04
    'string-var': string // created by User 1 on 2021-07-04
    'boolean-var': boolean // created by User 2 on 2021-07-04
    'number-var': number // created by User 1 on 2021-07-04
    'json-var': DVCJSON // created by Unknown User on 2021-07-04
}

/**
    description: Different ways to say hello
    created by: User 1
    created on: 2021-07-04
*/
export const ENUM_VAR = 'enum-var' as const

/**
    created by: User 2
    created on: 2021-07-04
*/
export const REGEX_VAR = 'regex-var' as const

/**
    created by: User 1
    created on: 2021-07-04
*/
export const STRING_VAR = 'string-var' as const

/**
    created by: User 2
    created on: 2021-07-04
*/
export const BOOLEAN_VAR = 'boolean-var' as const

/**
    created by: User 1
    created on: 2021-07-04
*/
export const NUMBER_VAR = 'number-var' as const

/**
    created by: Unknown User
    created on: 2021-07-04
*/
export const JSON_VAR = 'json-var' as const
"
`;

exports[`generate types correctly generates JS SDK types with obfuscated keys 1`] = `
"type DVCJSON = { [key: string]: string | boolean | number }

export type DVCVariableTypes = {
    'dvc_obfs_8397a7cc0bd9847dab4cfcffc90d01385e21fec6f1d3999e3aaac2a137d69964': 'Hello' | 'Hey' | 'Hi'
    'dvc_obfs_cabd691e35fffe317483d72108898be69e03c7611dfb035660e4f71b9ed8cc44': string
    'dvc_obfs_ceb6db49d7e9c00eb307304a7a23f2c404777030a4324bf34ce50ed7148a4e79': string
    'dvc_obfs_9d44428272a4f0f8fefd891d93f0268ca3e52464ca95147d077437ba82318700': boolean
    'dvc_obfs_f66155be75be4dc7e53cc13a7837db8b389be45c8bd65653e384f7afaddba1d7': number
    'dvc_obfs_a991871dbce45b30da1e125ae28b59eb74c1da1f48ad6a2112ac5395093f37f0': DVCJSON
}

/**
    key: enum-var
    description: Different ways to say hello
    created by: User 1
    created on: 2021-07-04
*/
export const ENUM_VAR = 'dvc_obfs_8397a7cc0bd9847dab4cfcffc90d01385e21fec6f1d3999e3aaac2a137d69964' as const

/**
    key: regex-var
    created by: User 2
    created on: 2021-07-04
*/
export const REGEX_VAR = 'dvc_obfs_cabd691e35fffe317483d72108898be69e03c7611dfb035660e4f71b9ed8cc44' as const

/**
    key: string-var
    created by: User 1
    created on: 2021-07-04
*/
export const STRING_VAR = 'dvc_obfs_ceb6db49d7e9c00eb307304a7a23f2c404777030a4324bf34ce50ed7148a4e79' as const

/**
    key: boolean-var
    created by: User 2
    created on: 2021-07-04
*/
export const BOOLEAN_VAR = 'dvc_obfs_9d44428272a4f0f8fefd891d93f0268ca3e52464ca95147d077437ba82318700' as const

/**
    key: number-var
    created by: User 1
    created on: 2021-07-04
*/
export const NUMBER_VAR = 'dvc_obfs_f66155be75be4dc7e53cc13a7837db8b389be45c8bd65653e384f7afaddba1d7' as const

/**
    key: json-var
    created by: Unknown User
    created on: 2021-07-04
*/
export const JSON_VAR = 'dvc_obfs_a991871dbce45b30da1e125ae28b59eb74c1da1f48ad6a2112ac5395093f37f0' as const
"
`;

exports[`generate types correctly generates React SDK types 1`] = `
"import {
    useVariable as originalUseVariable,
    useVariableValue as originalUseVariableValue,
    DVCVariable,
    DVCVariableValue
} from '@devcycle/react-client-sdk'


export type UseVariableValue = <
    K extends string & keyof DVCVariableTypes
>(
    key: K,
    defaultValue: DVCVariableTypes[K]
) => DVCVariableTypes[K]

export const useVariableValue = originalUseVariableValue as UseVariableValue

export type UseVariable = <
    K extends string & keyof DVCVariableTypes,
    T extends DVCVariableValue & DVCVariableTypes[K],
>(
    key: K,
    defaultValue: DVCVariableTypes[K]
) => DVCVariable<T>

export const useVariable = originalUseVariable as UseVariable

type DVCJSON = { [key: string]: string | boolean | number }

export type DVCVariableTypes = {
    /**
        description: Different ways to say hello
        created by: User 1
        created on: 2021-07-04
    */
    'enum-var': 'Hello' | 'Hey' | 'Hi'
    /**
        created by: User 2
        created on: 2021-07-04
    */
    'regex-var': string
    /**
        created by: User 1
        created on: 2021-07-04
    */
    'string-var': string
    /**
        created by: User 2
        created on: 2021-07-04
    */
    'boolean-var': boolean
    /**
        created by: User 1
        created on: 2021-07-04
    */
    'number-var': number
    /**
        created by: Unknown User
        created on: 2021-07-04
    */
    'json-var': DVCJSON
}

/**
    description: Different ways to say hello
    created by: User 1
    created on: 2021-07-04
*/
export const ENUM_VAR = 'enum-var' as const

/**
    created by: User 2
    created on: 2021-07-04
*/
export const REGEX_VAR = 'regex-var' as const

/**
    created by: User 1
    created on: 2021-07-04
*/
export const STRING_VAR = 'string-var' as const

/**
    created by: User 2
    created on: 2021-07-04
*/
export const BOOLEAN_VAR = 'boolean-var' as const

/**
    created by: User 1
    created on: 2021-07-04
*/
export const NUMBER_VAR = 'number-var' as const

/**
    created by: Unknown User
    created on: 2021-07-04
*/
export const JSON_VAR = 'json-var' as const
"
`;
